kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uhuy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: uhuy-service
          image: yansetiaji/uhuy-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
