kubernetes/Service-ci.yaml
apiVersion: v1
kind: Service
metadata:
  name: uhuy-service-service-ci
  namespace: uhuy
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
