kubernetes/Service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: uhuy-service-service-np
  namespace: uhuy
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
  type: NodePort
