kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uhuy-service-ingress
spec:
  rules:
    - host: uhuy-service.cicicuit.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uhuy-service-service
                port:
                  number: 8080
